@@ -107,6 +107,7 @@ The following built-in tasks support nested <code>&lt;filterchain&gt;</code> ele
 A FilterChain is formed by defining zero or more of the following
 nested elements.<br>
 <a href="#filterreader">FilterReader</a><br>
+<a href="#appendtolines">AppendToLines</a><br>
 <a href="#classconstants">ClassConstants</a><br>
 <a href="#escapeunicode">EscapeUnicode</a><br>
 <a href="#expandproperties">ExpandProperties</a><br>
@@ -476,6 +477,39 @@ This will attach the prefix <code>Foo</code> to all lines.
 Convenience method:
 <blockquote><pre>
 &lt;prefixlines prefix=&quot;Foo&quot;/&gt;
+</pre></blockquote>
+
+<h3><a name="appendtolines">AppendToLines</a></h3>
+
+Attaches an appendix to every line.
+
+<p><em>since Ant 1.8.0</em></p>
+
+<table cellSpacing=0 cellPadding=2 border=1>
+  <tr>
+    <td vAlign=top><b>Parameter Name</b></td>
+    <td vAlign=top><b>Parameter Value</b></td>
+    <td vAlign=top align="center"><b>Required</b></td>
+  </tr>
+  <tr>
+    <td vAlign=top>append</td>
+    <td vAlign=top align="center">Appendix to be attached to lines.</td>
+    <td vAlign=top align="center">Yes</td>
+  </tr>
+</table>
+<p>
+<h4>Example:</h4>
+
+This will attach the appendix <code>Foo</code> to all lines.
+<blockquote><pre>
+&lt;filterreader classname=&quot;org.apache.tools.ant.filters.AppendToLines&quot;&gt;
+  &lt;param name=&quot;append&quot; value=&quot;Foo&quot;/&gt;
+&lt;/filterreader&gt;
+</pre></blockquote>
+
+Convenience method:
+<blockquote><pre>
+&lt;appendtolines append=&quot;Foo&quot;/&gt;
 </pre></blockquote>
 
 <h3><a name="replacetokens">ReplaceTokens</a></h3>
